--- a/gradle.properties
+++ b/gradle.properties
@@ -1,29 +1,19 @@
-version=999.0.0.999
-android.useAndroidX=true
-enabledSandboxResourceProcessor=true
-enableKotlinNative=true
-enableKotlinMobile=true
-enableKotlinAndroid=true
-enableKotlinMobileTvos=true
-enableMetalPlayground=false
-org.gradle.jvmargs=-Xmx2g -Dkotlin.daemon.jvm.options="-Xmx3g" -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
-systemProp.org.gradle.internal.http.connectionTimeout=160000
-systemProp.org.gradle.internal.http.socketTimeout=160000
-systemProp.org.gradle.internal.repository.max.retries=16
-systemProp.org.gradle.internal.repository.initial.backoff=500
-project.name=korge-next-root
-project.scm.url=https://github.com/korlibs/korge-next
-project.description=Multiplatform Kotlin Game Engine
-project.license.name=MIT
-project.license.url=https://raw.githubusercontent.com/korlibs/korge-next/master/korge/LICENSE.txt
-kotlin.mpp.stability.nowarn=true
-kotlin.wasm.stability.nowarn=true
-org.gradle.warning.mode=none
-kotlin.native.ignoreIncorrectDependencies=true
-kotlin.native.ignoreDisabledTargets=true
-kotlin.mpp.androidSourceSetLayoutVersion1.nowarn=true
-org.gradle.daemon=true
-kotlin.incremental.useClasspathSnapshot=true
-org.gradle.parallel=true
-enableMFVC=false
-kotlin.mpp.applyDefaultHierarchyTemplate=false
+jackson_version="2.16.1"
+jna_version="5.13.0"
+jcodec_version="0.2.5"
+junit_version="4.13.2"
+asm_version="9.5"
+jgit_version="5.13.1.202206130422-r"
+kotlin_version="2.0.0"
+kotlinx_coroutines_version="1.9.0-RC"
+kotlinx_serialization_version="1.7.0"
+kotlinx_atomicfu_version="0.24.0"
+korlibs_version="6.0.0-beta1"
+kotlinx_benchmark_version="0.4.7"
+dokka_version="1.9.10"
+kover_version="0.6.1"
+kover_agent_version="1.0.712"
+node_version="20.12.1"
+android_build_gradle_version="8.2.0"
+gson_version="2.10.1"
+gradle_publish_plugin_version="1.1.0"
