--- a/libraries/wasm/build.gradle
+++ b/libraries/wasm/build.gradle
@@ -1,12 +1,16 @@
 artifact 'korge:wasm'
 
 source {
- include project(':korge:platform')
- include project(':korge:memory')
- include project(':korge:logger')
- include project(':korge:math-core')
- include project(':korge:datastructure')
- include project(':korge:compression')
- include project(':korge:serialization')
- include project(':korge:io')
+    common {
+        include project(':korge:platform')
+        include project(':korge:memory')
+        include project(':korge:logger')
+        include project(':korge:math-core')
+        include project(':korge:datastructure')
+        include project(':korge:compression')
+    }
+    desktop {
+        include "org.ow2.asm:asm:9.5"
+        include "org.ow2.asm:asm-util:9.5"
+    }
 }
