featurea.android.ignored=true

--- a/gradle.properties
+++ b/gradle.properties
@@ -52,3 +52,5 @@ kotlin.mpp.enableCInteropCommonization=true
 kotlin.native.ignoreDisabledTargets=true
 kotlin.incremental.js=true
 kotlin.jvm.target.validation.mode=IGNORE
+featurea.android.ignored=true
+featurea.ios.ignored=true
