--- a/libraries/engine/build.gradle
+++ b/libraries/engine/build.gradle
@@ -1,9 +1,10 @@
 artifact "korge:engine"
 
 source {
-    include project(":korge:core")
-    include "org.jetbrains.kotlinx:kotlinx-coroutines-debug:1.9.0-RC"
-
+    common {
+        include project(":korge:core")
+        include "org.jetbrains.kotlinx:kotlinx-coroutines-debug:1.9.0-RC"
+    }
     desktop {
         include project(":korge:ipc")
     }
