--- a/libraries/compression/build.gradle
+++ b/libraries/compression/build.gradle
@@ -1,9 +1,9 @@
-artifact 'korge:compression'
+artifact "korge:compression"
 
 source {
- include project(':korge:io-stream')
- include project(':korge:concurrent')
- include project(':korge:math-core')
- include project(':korge:datastructure-core')
+ include project(":korge:io-stream")
+ include project(":korge:concurrent")
+ include project(":korge:math-core")
+ include project(":korge:datastructure-core")
  // com.soywiz:korlibs-checksum:6.0.0
 }
