--- a/libraries/inject/build.gradle
+++ b/libraries/inject/build.gradle
@@ -1,5 +1,5 @@
-artifact 'korge:inject'
+artifact "korge:inject"
 
 source {
-    include "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.9.0-RC"
+    include "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinx_coroutines_version"
 }
