--- a/libraries/math/build.gradle
+++ b/libraries/math/build.gradle
@@ -1,9 +1,9 @@
-artifact 'korge:math'
+artifact "korge:math"
 
 source {
- include project(':korge:math-core')
- include project(':korge:math-vector')
- include project(':korge:platform')
- include project(':korge:datastructure')
- include project(':korge:number')
+ include project(":korge:math-core")
+ include project(":korge:math-vector")
+ include project(":korge:utils")
+ include project(":korge:datastructure")
+ include project(":korge:number")
 }
