--- a/libraries/string/build.gradle
+++ b/libraries/string/build.gradle
@@ -1,6 +1,6 @@
-artifact 'korge:string'
+artifact "korge:string"
 
 source {
- include "org.jetbrains.kotlinx:atomicfu:0.24.0"
- include project(':korge:platform')
+    include "org.jetbrains.kotlinx:atomicfu:$kotlinx_atomicfu_version"
+    include project(":korge:utils")
 }
