--- a/gradle.properties
+++ b/gradle.properties
@@ -5,12 +5,9 @@ junit_version=4.13.2
 asm_version=9.5
 jgit_version=5.13.1.202206130422-r
 kotlin_version=1.7.10
-#kotlin_version=2.0.0
 kotlinx_coroutines_version=1.6.4
-#kotlinx_coroutines_version=1.9.0-RC
 kotlinx_serialization_version=1.4.0
-#kotlinx_serialization_version=1.7.0
-kotlinx_atomicfu_version=0.24.0
+kotlinx_atomicfu_version=0.23.0
 korlibs_version=6.0.0-beta1
 kotlinx_benchmark_version=0.4.7
 dokka_version=1.9.10
@@ -21,16 +18,13 @@ android_build_gradle_version=8.2.0
 gson_version=2.10.1
 gradle_publish_plugin_version=1.1.0
 androidx_navigation_version=2.5.2
-featurea_version=0.0.9
-gdx_version=1.9.7
-jdk_version=21
 jogamp_version=v2.4.0-rc4
-kotlin_atomicfu_version=0.23.2
 kotlinx_html_version=0.7.5
 kotlinx_html_js_version=0.7.5
 ktor_version=1.6.8
 logback_version=1.2.3
 lwjgl_version=3.3.3
+featurea_version=0.0.9
 
 # gradle
 org.gradle.jvmargs=-Xmx4096m -Dfile.encoding=UTF-8 \
@@ -40,8 +34,7 @@ org.gradle.jvmargs=-Xmx4096m -Dfile.encoding=UTF-8 \
                    --add-opens jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED  \
                    --add-opens jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED \
                    --add-opens jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED \
-                   --add-opens jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
-                   -ea
+                   --add-opens jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED                   
 org.gradle.caching=true
 org.gradle.parallel=true
 org.gradle.console=plain
