--- a/libraries/ffi/build.gradle
+++ b/libraries/ffi/build.gradle
@@ -1,14 +1,14 @@
-artifact 'korge:ffi'
+artifact "korge:ffi"
 
 source {
     common {
-        include project(':korge:io-fs')
-        include project(':korge:platform')
-        include project(':korge:datastructure')
-        include project(':korge:memory')
-        include project(':korge:concurrent')
-        include "com.soywiz:korlibs-annotations:6.0.0"
-        include "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.9.0-RC"
+        include project(":korge:io-fs")
+        include project(":korge:utils")
+        include project(":korge:datastructure")
+        include project(":korge:memory")
+        include project(":korge:concurrent")
+//        include "com.soywiz:korlibs-annotations:6.0.0"
+        include "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinx_coroutines_version"
     }
     desktop {
         include "net.java.dev.jna:jna:5.14.0"
