--- a/libraries/image-core/build.gradle
+++ b/libraries/image-core/build.gradle
@@ -1,17 +1,17 @@
-artifact 'korge:image-core'
+artifact "korge:image_core"
 
 source {
     common {
-        include "com.soywiz:korlibs-annotations:6.0.0"
-        include "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.9.0-RC"
-        include "org.jetbrains.kotlinx:atomicfu:0.24.0"
+//        include "com.soywiz:korlibs-annotations:6.0.0"
+        include "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinx_coroutines_version"
+        include "org.jetbrains.kotlinx:atomicfu:$kotlinx_atomicfu_version"
     }
     desktop {
         include "net.java.dev.jna:jna:5.14.0"
         include "net.java.dev.jna:jna-platform:5.14.0"
     }
     js {
-        include project(':korge:wasm')
-        include project(':korge:compression')
+        include project(":korge:wasm")
+        include project(":korge:compression")
     }
 }
