--- a/libraries/io-nodejs/build.gradle
+++ b/libraries/io-nodejs/build.gradle
@@ -1,6 +1,6 @@
-artifact 'korge:io-nodejs'
+artifact "korge:io-nodejs"
 
 source {
- include project(':korge:platform')
- include project(':korge:io')
+ include project(":korge:utils")
+ include project(":korge:io")
 }
