--- a/libraries/jseval/build.gradle
+++ b/libraries/jseval/build.gradle
@@ -1,7 +1,7 @@
-artifact 'korge:jseval'
+artifact "korge:jseval"
 
 source {
- include project(':korge:platform')
- include project(':korge:concurrent')
- include project(':korge:serialization')
+ include project(":korge:utils")
+ include project(":korge:concurrent")
+ include project(":korge:serialization")
 }
