--- a/libraries/serialization/build.gradle
+++ b/libraries/serialization/build.gradle
@@ -1,8 +1,8 @@
-artifact 'korge:serialization'
+artifact "korge:serialization"
 
 source {
- include project(':korge:string')
- include project(':korge:math-core')
- include project(':korge:datastructure-core')
- include project(':korge:platform')
+    include project(":korge:string")
+    include project(":korge:math-core")
+    include project(":korge:datastructure-core")
+    include project(":korge:utils")
 }
