--- a/libraries/time/build.gradle
+++ b/libraries/time/build.gradle
@@ -1,5 +1,5 @@
-artifact 'korge:time'
+artifact "korge:time"
 
 source {
- include project(':korge:time-core')
+ include project(":korge:time-core")
 }
