--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ jgit_version=5.13.1.202206130422-r
 kotlin_version=1.7.10
 kotlinx_coroutines_version=1.6.4
 kotlinx_serialization_version=1.4.0
-kotlinx_atomicfu_version=0.23.0
+kotlinx_atomicfu_version=0.22.0
 korlibs_version=6.0.0-beta1
 kotlinx_benchmark_version=0.4.7
 dokka_version=1.9.10
@@ -34,7 +34,7 @@ org.gradle.jvmargs=-Xmx4096m -Dfile.encoding=UTF-8 \
                    --add-opens jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED  \
                    --add-opens jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED \
                    --add-opens jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED \
-                   --add-opens jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED                   
+                   --add-opens jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
 org.gradle.caching=true
 org.gradle.parallel=true
 org.gradle.console=plain
@@ -47,3 +47,7 @@ kotlin.incremental.js=true
 kotlin.jvm.target.validation.mode=IGNORE
 featurea.android.ignored=true
 featurea.ios.ignored=true
+systemProp.org.gradle.internal.http.connectionTimeout=160000
+systemProp.org.gradle.internal.http.socketTimeout=160000
+systemProp.org.gradle.internal.repository.max.retries=16
+systemProp.org.gradle.internal.repository.initial.backoff=500
