--- a/gradle.properties
+++ b/gradle.properties
@@ -1,30 +1,10 @@
-jackson_version=2.16.1
-jna_version=5.13.0
-jcodec_version=0.2.5
-junit_version=4.13.2
-asm_version=9.5
-jgit_version=5.13.1.202206130422-r
-kotlin_version=1.7.10
-kotlinx_coroutines_version=1.6.4
-kotlinx_serialization_version=1.4.0
-kotlinx_atomicfu_version=0.22.0
-korlibs_version=6.0.0-beta1
-kotlinx_benchmark_version=0.4.7
-dokka_version=1.9.10
-kover_version=0.6.1
-kover_agent_version=1.0.712
-node_version=20.12.1
-android_build_gradle_version=8.2.0
-gson_version=2.10.1
-gradle_publish_plugin_version=1.1.0
-androidx_navigation_version=2.5.2
-jogamp_version=v2.4.0-rc4
-kotlinx_html_version=0.7.5
-kotlinx_html_js_version=0.7.5
-ktor_version=1.6.8
-logback_version=1.2.3
-lwjgl_version=3.3.3
 featurea_version=0.0.9
+jackson_version=2.16.1
+jdk_version=21
+kotlin_version=2.0.0
+kotlinx_atomicfu_version=0.24.0
+kotlinx_coroutines_version=1.9.0-RC
+kotlinx_serialization_version=1.7.1
 
 # gradle
 org.gradle.jvmargs=-Xmx4096m -Dfile.encoding=UTF-8 \
