--- a/libraries/image/build.gradle
+++ b/libraries/image/build.gradle
@@ -16,6 +16,6 @@ source {
     include project(":korge:wasm")
     include project(":korge:string")
     include project(":korge:io")
-//    include "com.soywiz:korlibs-checksum:6.0.0"
+    include project(":korge:checksum")
     include "org.jetbrains.kotlinx:atomicfu:$kotlinx_atomicfu_version"
 }
