--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 featurea_version=0.0.9
 jackson_version=2.16.1
 jdk_version=21
-kotlin_version=2.0.0
+kotlin_version=2.0.20-RC
 kotlinx_atomicfu_version=0.24.0
 kotlinx_coroutines_version=1.9.0-RC
 kotlinx_serialization_version=1.7.1
