gradle/sandbox/run.bat #ENGINE-91

--- a/libraries/datastructure-core/build.gradle
+++ b/libraries/datastructure-core/build.gradle
@@ -1,4 +1,4 @@
-artifact "korge:datastructurecore"
+artifact "korge:datastructure-core"
 
 source {
     include "org.jetbrains.kotlinx:atomicfu:$kotlinx_atomicfu_version"
