hitClack, magicMazeIsland #ENGINE-91

--- a/project.gradle
+++ b/project.gradle
@@ -2,7 +2,7 @@ module("demos/candyCrush")
 module("demos/chess")
 module("demos/dungeon")
 module("demos/hitClack")
-//module("demos/magicMazeIsland")
+module("demos/magicMazeIsland")
 //module("demos/pacoman")
 //module("demos/paf")
 //module("demos/parasite")
