magicMazeIsland, pacoman, paf, parasite, puzzle2048, steroids #ENGINE-91

--- a/demos/parasite/build.gradle
+++ b/demos/parasite/build.gradle
@@ -2,4 +2,6 @@ artifact "korge:parasite"
 
 source {
     include project(":korge:engine")
+    include project(":korge:collision")
+    include project(":korge:audio")
 }
