--- a/project.gradle
+++ b/project.gradle
@@ -1,14 +1,14 @@
-module("demos/candyCrush")
-module("demos/chess")
-module("demos/dungeon")
-module("demos/hitClack")
-module("demos/magicMazeIsland")
-module("demos/pacoman")
-module("demos/paf")
-module("demos/parasite")
-module("demos/puzzle2048")
+//module("demos/candyCrush")
+//module("demos/chess")
+//module("demos/dungeon")
+//module("demos/hitClack")
+//module("demos/magicMazeIsland")
+//module("demos/pacoman")
+//module("demos/paf")
+//module("demos/parasite")
+//module("demos/puzzle2048")
 module("demos/sandbox")
-module("demos/steroids")
+//module("demos/steroids")
 
 module("libraries/annotations")
 module("libraries/asset-manager")
