migrate to new featurea plugin #ENGINE-91

--- a/libraries/image-core/build.gradle
+++ b/libraries/image-core/build.gradle
@@ -10,7 +10,7 @@ source {
         include "net.java.dev.jna:jna:5.14.0"
         include "net.java.dev.jna:jna-platform:5.14.0"
     }
-    js {
+    browser {
         include project(":korge:wasm")
         include project(":korge:compression")
     }
