--- a/demos/sandbox/assemble/sandbox-desktop/build.gradle
+++ b/demos/sandbox/assemble/sandbox-desktop/build.gradle
@@ -1,5 +1,5 @@
 artifact "korge:sandbox-desktop"
-mainCall "korge.sandbox.main()"
+//mainCall "korge.sandbox.main()"
 
 source {
     include project(":korge:sandbox")
